# bot

./: LICENSE  README.md  crate_guesses.txt  pyproject.toml
bot/: analysis.py
convergle-bot/: alien_guesses.txt  pyproject.toml  raise_guesses.txt  soare_guesses.txt
convergle-bot/bot/: memorization.py
convergle-bot/tests/: test_convergle_bot.py
wordle-bot/: pyproject.toml  roate_guesses.txt  salet_guesses.txt
wordle-bot/bot/: guess.py  play.py  words.py
wordle-bot/wordle_bot/: analysis.py  guess.py  play.py
wordle_bot/: guess.py  memorization.py
